<resources>
    <string name="app_name">CheckPoint</string>

    <!-- Check Details fragment -->
    <string name="check_details_back">Back</string>

    <!-- New Check fragment -->
    <string name="new_check_complete">complete</string>
    <string name="new_check_final_price_example">10 000,00</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="final_price_hint">Final price</string>
    <string name="date_hint">Date</string>
    <string name="shop_hint">Shop</string>
    <string name="category_hint">Category</string>
    <string name="field_is_empty_error">Field is empty</string>
    <string name="edit_title">Edit</string>
    <string name="currency">руб</string>
    <string name="auth_title">Auth</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">How to use?</string>
    <string name="check_list_title">Check list</string>
    <string name="check_details_title">Check details</string>
    <string name="edit_check_title">Edit check</string>
    <string name="there_are_no_checks">There are no checks yet. \nAdd new one now!</string>
    <string name="user_name_example">User name</string>
    <string name="log_in">Log in</string>
    <string name="about_title">About</string>
    <string name="log_in_description">and add some new reciepts!</string>
    <string name="crop_text">Crop</string>
    <string name="back_text">Back</string>
    <string name="crop_error">Crop error</string>
</resources>
