<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/help_title" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings_title" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_auth_outline_black_24dp"
                android:title="@string/about_title" />

    </group>

</menu>
