<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/checkListFragment">

    <fragment
            android:id="@+id/checkListFragment"
            android:name="ru.spbstu.gusev.checkpoint.ui.checklist.CheckListFragment"
            android:label="@string/check_list_title"
            tools:layout="@layout/check_list_fragment" />
    <fragment
            android:id="@+id/checkDetailsFragment"
            android:name="ru.spbstu.gusev.checkpoint.ui.checklist.CheckDetailsFragment"
            android:label="@string/check_details_title"
            tools:layout="@layout/check_details_fragment" />
    <fragment
            android:id="@+id/editCheckFragment"
            android:name="ru.spbstu.gusev.checkpoint.ui.checklist.EditCheckFragment"
            android:label="@string/edit_check_title"
            tools:layout="@layout/new_check_fragment" />
</navigation>