<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="?attr/colorPrimary"
        android:gravity="bottom">

    <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/header_logo_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerInside"
            app:civ_circle_color="?attr/colorSecondary"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:tint="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

    <TextView
            android:id="@+id/user_name_text"
            style="@style/TextHeadlineBold200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/user_name_example"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_logo_image"
            app:layout_constraintVertical_bias="0.98" />

    <TextView
            android:id="@+id/log_in_title_text"
            style="@style/TextHeadlineBold200"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/log_in"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_logo_image"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/log_in_description_text"
            style="@style/TextCommonThink200"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/log_in_description"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/header_logo_image"
            app:layout_constraintTop_toBottomOf="@+id/log_in_title_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
