<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.checklist.EditCheckFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_check_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/check_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/category_hint"
                        android:minWidth="110dp"
                        android:text="Category name example"
                        android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/check_image"
                    android:layout_width="103dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars[14]" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shop_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shop_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/shop_hint"
                        android:minWidth="110dp"
                        android:text="Shop"
                        android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shop_layout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_hint"
                        android:inputType="date"
                        android:minWidth="110dp"
                        android:text="12.02.2018" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/products_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/final_price_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_layout"
                    tools:itemCount="3"
                    tools:listitem="@layout/product_item_editable" />

            <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/ic_add_black_24dp"
                    android:tint="?attr/colorSuccess"
                    app:layout_constraintEnd_toEndOf="@+id/products_recycler"
                    app:layout_constraintStart_toStartOf="@+id/products_recycler"
                    app:layout_constraintTop_toBottomOf="@id/products_recycler" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/final_price_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@id/complete_button"
                    app:layout_constraintEnd_toEndOf="@+id/products_recycler"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/products_recycler"
                    app:layout_constraintTop_toBottomOf="@id/add_button">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/final_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/final_price_hint"
                        android:inputType="number"
                        android:minWidth="100dp"
                        android:text="@string/new_check_final_price_example"
                        android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/complete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:paddingStart="64dp"
                    android:paddingEnd="64dp"
                    android:text="@string/new_check_complete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>